the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2019-] added data structure TMCG_Bigint
* [2021-03-20] RFC4880: fixed bug in PacketDecode() handling Trust packets
* [2021-02-07] RFC4880: cleanup ArmorDecode() w.r.t. carriage returns
* [2021-01-21] RFC4880: adjust weakness check E*DSA (change in libgcrypt 1.9.x)
* [2020-10-15] RFC4880: added type definition TMCG_OpenPGP_Pubkeys
* [2020-10-14] RFC4880: added member TMCG_OpenPGP_Message::PrintInfo()
* [2020-09-26] RFC4880: ignore bad packets in member SignatureParse() 
* [2020-09-26] RFC4880: fixed bug #58981 (ignore marker packets)
* [2020-09-26] RFC4880: added member SignaturesParse()
* [2020-09-19] RFC4880: added type definition TMCG_OpenPGP_Signatures
* [2020-08-28] RFC4880: fixed bug #58937 (handle unknown S2K specifier)
* [2020-08-19] RFC4880: fixed bug #58983 (std::bad_alloc on duplicated subkeys)
* [2020-08-14] RFC4880: fixed bug #58937 (handle unknown packet versions)
* [2020-08-08] RFC4880: collect embedded signatures from unhashed subpackets
* [2020-08-07] RFC4880: fixed bug #58887 (excluded trailing blanks from hashing)
* [2020-08-07] RFC4880: added feature request #58895 (unknown critical notation)
* [2020-07-19] RFC4880: fixed bug #58777 (should not decrypt SED packets)
* [2020-05-02] RFC4880: fixed bug w.r.t. unrecognized critical subpackets
* [2019-12-21] RFC4880: added boolean flag to control some RFC 4880bis features
* [2019-11-17] RFC4880: guard against zero-allocation of tmcg_openpgp_byte_t
* [2019-11-15] RFC4880: fixed check for bad marker in PacketDecodeTag10()
* [2019-10-31] RFC4880: fixed bug #57135 (EdDSA sig values with leading zeros)